@startuml
title Cost Strategy

interface CostStrategy<<interface>> {
+getCost(ShipmentOption): ShipmentCost
 }
class MonetaryCostStrategy {
-LABOR_COST: BigDecimal   -materialCostPerGram: Map<>()   +getCost(): ShipmentCost
 }
class CarbonCostStrategy {
 -carbonCostPerGram: Map<>()   +getCost(): ShipmentCost
  }
class WeightedCostStrategy {
  -carbonCostStrategy: CarbonCostStrategy   -monetaryCostStrategy: MonetaryCostStrategy   +getCost(): ShipmentCost
    }
CostStrategy <|.. MonetaryCostStrategy
CostStrategy <|.. CarbonCostStrategy
CostStrategy <|.. WeightedCostStrategy
WeightedCostStrategy <|.. MonetaryCostStrategy
WeightedCostStrategy <|.. CarbonCostStrategy
@enduml